--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,9 @@ body {
 }
 
 .weather-info {
-  background-color: #0f0f0f;
+  background-color: #1d1d1d;
   padding: 2rem;
   border-radius: 4px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
